--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,9 +43,10 @@ dependencies {
     compile 'com.android.volley:volley:1.0.0'
     compile 'com.journeyapps:zxing-android-embedded:3.2.0@aar'
     compile 'com.google.zxing:core:3.2.1'
-    compile ('io.socket:socket.io-client:0.8.3') {
+    compile('io.socket:socket.io-client:0.8.3') {
         // excluding org.json which is provided by Android
         exclude group: 'org.json', module: 'json'
     }
+    compile 'me.dm7.barcodescanner:zbar:1.9.2'
 }
 
