--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,3 +50,14 @@ dependencies {
     compile 'me.dm7.barcodescanner:zbar:1.9.2'
 }
 
+
+dependencies {
+    compile 'com.google.firebase:firebase-crash:10.0.1'
+    compile 'com.google.firebase:firebase-core:10.0.1'
+    compile 'com.google.firebase:firebase-auth:10.0.1'
+    compile 'com.google.firebase:firebase-invites:10.0.1'
+}
+dependencies {
+    compile 'com.google.firebase:firebase-messaging:10.0.1'
+}
+apply plugin: 'com.google.gms.google-services'
