--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,12 +1,77 @@
+/*
 apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 25
-    buildToolsVersion '26.0.2'
+    buildToolsVersion '25.0.3'
+    defaultConfig {
+        applicationId "com.bhatnagar.arpit.wallet"
+        minSdkVersion 15
+        targetSdkVersion 25
+        versionCode 1
+        versionName "1.0"
+        multiDexEnabled true
+    }
+    buildTypes {
+        release {
+            minifyEnabled false
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+        }
+        debug {
+            testCoverageEnabled = true
+        }
+        lintOptions {
+            disable "ResourceType"
+        }
+    }
+}
+
+
+
+dependencies {
+    compile fileTree(include: ['*.jar'], dir: 'libs')
+
+    compile 'com.android.support:support-v4:25.4.0'
+    compile ('com.android.support:appcompat-v7:25.4.0'){
+        exclude module: 'support-v4'
+    }
+    compile ('com.android.support:design:25.4.0'){
+        exclude module: 'support-v4'
+    }
+
+    //testCompile 'junit:junit:4.12'
+    //compile 'com.android.support.constraint:constraint-layout:1.0.2'
+    compile ('com.android.volley:volley:1.0.0'){
+        exclude module: 'support-v4'
+    }
+    compile ('com.journeyapps:zxing-android-embedded:3.2.0@aar'){
+        exclude module: 'support-v4'
+    }
+    compile ('com.google.zxing:core:3.2.1'){
+        exclude module: 'support-v4'
+    }
+    compile('io.socket:socket.io-client:0.8.3') {
+        exclude group: 'org.json', module: 'json'
+        exclude module: 'support-v4'
+    }
+    compile ('me.dm7.barcodescanner:zbar:1.9.2'){
+        exclude module: 'support-v4'
+    }
+    compile ('com.android.support:multidex:1.0.1'){
+        exclude module: 'support-v4'
+    }
+}
+
+apply plugin: 'com.google.gms.google-services'*/
+apply plugin: 'com.android.application'
+
+android {
+    compileSdkVersion 25
+    buildToolsVersion '25.0.3'
     defaultConfig {
         applicationId "com.bhatnagar.arpit.wallet"
         minSdkVersion 14
-        targetSdkVersion 25
+        targetSdkVersion 19
         versionCode 1
         versionName "1.0"
         multiDexEnabled true
@@ -29,11 +94,16 @@ dependencies {
     })
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support:design:25.3.1'
+    compile 'com.android.support:cardview-v7:25.3.1'
     testCompile 'junit:junit:4.12'
-    compile files('libs/android-support-v4.jar')
+    //compile files('libs/android-support-v4.jar')
     compile files('libs/gson-2.2.4.jar')
-    compile files('libs/khandroid-httpclient-4.2.3.jar')
-    compile files('libs/httpcore-4.1.1.jar')
+}
+dependencies {
+    compile 'com.android.support:support-v4:25.3.1'
+}
+dependencies {
+    compile 'com.android.support.constraint:constraint-layout:+'
 }
 dependencies {
     compile 'com.android.volley:volley:1.0.0'
@@ -47,16 +117,17 @@ dependencies {
 }
 
 
+
 dependencies {
-    compile 'com.google.firebase:firebase-invites:10.0.1'
+    compile 'com.google.firebase:firebase-invites:11.6.0'
 }
 dependencies {
-    compile 'com.google.firebase:firebase-messaging:10.0.1'
+    compile 'com.google.firebase:firebase-crash:11.6.0'
 }
 dependencies {
-    compile 'com.android.support.constraint:constraint-layout:+'
+    compile 'com.google.firebase:firebase-auth:11.6.0'
 }
 dependencies {
-    compile 'com.android.support:support-v4:25.+'
+    compile 'com.google.firebase:firebase-core:11.6.0'
 }
 apply plugin: 'com.google.gms.google-services'
