--- a/build.gradle
+++ b/build.gradle
@@ -6,10 +6,11 @@ buildscript {
         google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.3.3'
+        classpath 'com.android.tools.build:gradle:2.3.2'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
+        //classpath 'com.google.gms:google-services:3.0.0'
         classpath 'com.google.gms:google-services:3.0.0'
     }
 }
